# ganshin-mq

./: .gitignore  CMakeLists.txt  DEMO.md  FINAL_REPORT.md  Makefile  MessageBrokerRequirements.md  README.md  compile-flags.txt  compile_commands.json
1_pr/: .env.test.example  Dockerfile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
1_pr/sql/: scenarios.sql
1_pr/src/: app.module.ts  main.ts  store.module.ts
1_pr/test/: global-setup.cjs  jest-e2e.json  store.e2e-spec.ts
2_pr/: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  report.md
2_pr/k6/: publisher.js
2_pr/results/: consumer-rabbit-102400b-10000r-run-2026-04-22T12-16-08-091Z.json  consumer-rabbit-102400b-1000r-run-2026-04-22T12-14-05-180Z.json  consumer-rabbit-102400b-15000r-run-2026-04-22T12-17-14-545Z.json  consumer-rabbit-102400b-20000r-run-2026-04-22T12-18-16-065Z.json  consumer-rabbit-102400b-5000r-run-2026-04-22T12-15-01-245Z.json  consumer-rabbit-10240b-10000r-run-2026-04-22T12-11-39-417Z.json  consumer-rabbit-10240b-1000r-run-2026-04-22T12-09-56-815Z.json  consumer-rabbit-10240b-15000r-run-2026-04-22T12-12-29-640Z.json  consumer-rabbit-10240b-20000r-run-2026-04-22T12-13-17-171Z.json  consumer-rabbit-10240b-5000r-run-2026-04-22T12-10-49-551Z.json  (+146 more)
3_pr/: cache-comparison-practice.md
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE_AND_DESIGN.md
scripts/: run-demo.sh
src/: main.cpp
test/: package-lock.json  package.json  publisher.js  subscriber.js  test_advanced.js  test_connect.js  test_full.js  test_persistence.js
(+94 files in other folders)
